--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ a:hover {
 /* Hero texts */
 .hero-main-text {
   font-size: 48px;
-  font-weight: bold;
+  font-weight: 900;
   margin-bottom: 5px;
 }
 
@@ -122,3 +122,46 @@ a:hover {
   align-items: center;
   font-size: 18px;
 } /* End Section 1*/
+
+/* Section 2 */
+.information-header-text {
+  font-size: 36px;
+  font-weight: var(--heavy-font-weight);
+  color: var(--dark-blue-color);
+  text-align: center;
+  margin: 50px 0;
+}
+
+.cards-container {
+  /* width: 100%; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  padding: 0 130px;
+  margin-bottom: 120px;
+}
+
+.card-item {
+  width: 180px;
+  text-align: center;
+}
+
+/* Square form */
+.square-card {
+  width: 100%;
+  height: 180px;
+  border: 5px solid var(--light-blue-color);
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-text {
+  width: 98%;
+  color: var(--dark-gray-color);
+  font-size: 18px;
+  margin-top: 8px;
+} /* End Section 2 */
