--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /* Stylesheet for Odin-Flex-Project */
+@import url('https://fonts.cdnfonts.com/css/roboto');
 *{
   /* CSS Reset*/
   margin: 0;
@@ -7,7 +8,7 @@
 }
 
 :root {
-  --main-font: Roboto, sans-serif;
+  --main-font: 'Roboto', sans-serif;
   --quote-text-font: 'italic', serif;
   --dark-blue-color: #1f2937;
   --light-blue-color: #3b82f6;
@@ -165,3 +166,31 @@ a:hover {
   font-size: 18px;
   margin-top: 8px;
 } /* End Section 2 */
+
+/* Section 3 */
+.section-3 {
+  background-color: var(--gray-color);
+  padding: 135px 0;
+  color: var(--dark-blue-color);
+  
+}
+
+.quote-container {
+  width: 850px;
+  padding-right: 8px;
+  margin: 0 auto;
+}
+
+/* Quote text */
+.quote-text {
+  font-size: 36px;
+  font-style: italic;
+  font-family: 'Roboto Light', sans-serif;
+}
+
+.quote-author {
+  font-size: 24px;
+  font-weight: bold;
+  margin-top: 10px;
+  float: right;
+} /* End Section 3 */
