--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 /* Stylesheet for Odin-Flex-Project */
-@import url('https://fonts.cdnfonts.com/css/roboto');
+
+/* Roboto Font import from Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 *{
   /* CSS Reset*/
   margin: 0;
@@ -19,17 +22,34 @@
   --dark-gray-color: #6d7178;
   --white-color: #f9faf8;
   --heavy-font-weight: 900;
-  --light-font-weight: 'lighter';
+  --light-font-weight: 300;
 }
 
 body {
   font-family: var(--main-font); /* Main font: Roboto */
 }
 
+/* Global class used for the buttons 'Sign up' */
+.button {
+  color: var(--white-color);
+  border-radius: 8px;
+  padding: 9px 35px;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+/* Button animation from Gemini*/
+.button:active {
+  transform: scale(0.98);
+  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
 /* Section 1 */
 .section-1 {
   background-color: var(--dark-blue-color);
-  padding: 0  220px;
+  padding: 0 220px;
   color: var(--white-color);
 }
 
@@ -39,7 +59,6 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 20px 0;
-  
 }
 
 /* Header Logo */
@@ -90,28 +109,19 @@ a:hover {
 }
 
 /* Hero button */
-.hero-button {
+.hero.button {
   background-color: var(--light-blue-color);
   border: none;
   border-radius: 8px;
   color: var(--white-color);
   margin-top: 20px;
-  padding: 9px 35px;
-  font-size: 16px;
-  font-weight: bold;
-  cursor: pointer;
-  /* transition: all 0.3s ease; */
+  
 }
 
-.hero-button:hover {
+/* Hover effect of the first 'Sign up' button */
+.hero.button:hover {
   background-color: var(--hover-blue-color);
   color: var(--hover-gray-color);
-}
-
-/* Button animation from Gemini*/
-.hero-button:active {
-  transform: scale(0.98);
-  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 /* Hero placeholder */
@@ -176,8 +186,7 @@ a:hover {
 }
 
 .quote-container {
-  width: 850px;
-  padding-right: 8px;
+  max-width: 850px;
   margin: 0 auto;
 }
 
@@ -185,12 +194,73 @@ a:hover {
 .quote-text {
   font-size: 36px;
   font-style: italic;
-  font-family: 'Roboto Light', sans-serif;
+  font-weight: 300;
 }
 
 .quote-author {
   font-size: 24px;
   font-weight: bold;
   margin-top: 10px;
-  float: right;
+  margin-right: 30px;
+  text-align: right;
 } /* End Section 3 */
+
+/* Section 4 */
+.section-4 {
+  width: 100%;
+  padding: 110px 220px 140px;
+  margin: 0 auto;;
+}
+
+.call-to-action-container {
+  background-color: var(--light-blue-color);
+  color: var(--white-color);
+  padding: 50px 80px 50px 120px;
+  border-radius: 8px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.call-to-action-text-container {
+  flex-grow: 1;
+}
+
+/* Call to action texts */
+.call-to-action-title {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.call-to-action-text {
+  font-size: 18px;
+  color: var(--text-gray-color);
+  margin-top: 5px;
+}
+
+.call-to-action-button-container {
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Call to action button */
+.call-to-action.button {
+  background-color: var(--light-blue-color);
+  border: 2px solid var(--white-color);
+} 
+
+/* Hover effect of the second 'Sign up' button */
+.call-to-action.button:hover {
+  background-color: var(--white-color);
+  color: var(--light-blue-color);
+} /* End Section 4 */
+
+/* Footer */
+footer {
+  background-color: var(--dark-blue-color);
+  color: var(--text-gray-color);
+  padding: 40px 0;
+  text-align: center;
+  font-size: 18px;
+}
